# claude-code-marketplace

.claude-plugin/: marketplace.json
plugins/endpoint-exploration/.claude-plugin/: plugin.json
plugins/endpoint-exploration/skills/: endpoint-exploration
plugins/sandbox-cleanup/: sandbox-monitor.py
plugins/sandbox-cleanup/.claude-plugin/: hooks.json  plugin.json
plugins/sandbox-cleanup/hooks/: hooks.json
plugins/sandbox-cleanup/scripts/: sandbox-monitor.py
skill-evaluation/: .gitignore  README.md  example-evaluation.json  pyproject.toml
skill-evaluation/evaluations/: generate-pydantic-basic.json
skill-evaluation/src/skill_evaluation/: __init__.py  judge.py  models.py  runner.py
skills/endpoint-exploration/: evaluation.json
skills/endpoint-exploration/templates/: endpoint-documentation.md
